ThreadLocalRandom updated to CVS rev. 1.42